resources/css/style.css
/*------------------------------
Michael Santiago Portfolio
------------------------------*/


/* importing fonts */
@import url('https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap');
@import url('https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&display=swap');

/* color variables */
:root {
    --BG-color: rgba(23, 23, 23, 1);
    --title-color: rgba(255, 255, 255, 1);
}

/* general styles */

header {
    overflow: visible;
}

body {

    background-color: var(--BG-color) !important;

}

.items {
    margin: auto;
    padding: 0px 20px;
    color: red;
    text-decoration: none;
}

.items:hover {
    color: blue;
}

.title {

    font-family: 'Major Mono Display', monospace;
    font-weight: bold;
    font-size: 30px;
    letter-spacing: -.34em;

    color: red;

    padding-top: 45px !important;
    padding-left: 60px;

    position: relative;

    transition: all 1s;
}

.title .letter1 {
    animation: 5s titleHue infinite;
}

.title .letter2 {
    animation: 10s titleHue infinite;
}

.title .letter3 {
    animation: 7s titleHue infinite;
}

.title .letter4 {
    animation: 9s titleHue infinite;
}

.title .letter5 {
    animation: 12s titleHue infinite;
}

footer {

    text-align: center;

    font-family: 'DM Mono';

    position: absolute;
    width: 100%;
    bottom: 0;


    color: white;

}

footer p {

    padding-bottom: 25px;
    padding-top: 30px;

    opacity: 75%;

    font-weight: 300;
    font-style: italic;

}

footer a {
    display: inline-block;

    text-decoration: none;
    color: white;

    padding: 0px 20px;

    transition: all .3s;
}

footer a:hover {
    font-weight: bold;
    transform:scale(1.2);
    filter: drop-shadow(0 0 10px rgba(0, 0, 0, 1));
    transition: all .1s;
}

.col {
    border: 1px solid white;
}

.main-text {
    text-align: center;
    margin: 80px;
    overflow: visible;
}

.hi-text {

    font-family: 'Major Mono Display', monospace;
    font-weight: bold;
    font-size: 115px;
    color: rgba(255, 255, 255, 0.2);

    letter-spacing: -5px;
    text-wrap: nowrap;

    position: absolute;
    top: 100px;
    left: 50%;
    transform: translateX(-50%);
    z-index: 1;

    transition: all .2s;
}

.hi-text span:hover {
    color: rgba(255, 255, 255, 1);
    transition: all .2s;
}

.name-text {

    font-size: 60px;
    color: white;

    line-height: 90px;
    text-wrap: nowrap;

    position: absolute;
    overflow: hidden;
    top: 400px;
    left: 50%;
    transform: translateX(-50%);
    z-index: 100;

    transition: all .35s;
}

.bg {
    display: block;

    filter: saturate(100%) blur(100px);

    position: absolute;
    overflow: hidden;
    top: -20px;
    width: 100%;
    height: 600px;
}

/*
.bg .blob1 {
    position: absolute;
    top: 280px;
    left: 190px;
    z-index: -10;

    width: 250px;

    animation: 60s blobs_left infinite alternate;
}

.bg .blob2 {
    position: absolute;
    top: 280px;
    right: 150px;
    z-index: -100;

    width: 300px;

    animation: 50s blobs_left infinite alternate;
}

.bg .blob3 {
    width: 250px;

    position: absolute;
    top: 150px;
    left: 330px;
    z-index: -90;

    animation: 40s blobs_right infinite alternate;
}

.projects {

    margin: auto;

    text-decoration: none;

    position: relative;
    top: 400px;

    width: 100%;

}

.projects img {
    width: 90%;
    border-radius: 20px;

    margin: 40px 20px;
}
*/

.imagine {

    text-align: center;

    position: absolute;
    top: 625px;
    left: 50%;
    transform: translateX(-50%);
    z-index: 1;
}

.imagine h1 {

    font-family: 'Major Mono Display', monospace;
    font-weight: bold;
    font-size: 40px;

    letter-spacing: 20px;
    text-wrap: nowrap;

    color: red;

    filter: saturate(30%) drop-shadow(0 0 50px rgba(255, 0, 0, .6));
    transition: all .2s;
}

/* animations */
@keyframes titleHue {
    from {
        filter: hue-rotate(0deg);
    }
    to {
        filter: hue-rotate(360deg);
    }
}

@keyframes blobs_right {
    from {
        transform: rotate(0deg);
    }
    to {
        transform: rotate(360deg);
    }
}

@keyframes blobs_left {
    from {
        transform: rotate(0deg);
    }
    to {
        transform: rotate(-360deg);
    }
}


/* media queries */
@media (max-width: 600px) {
    .title {
        padding-left: 55px;
    }
    .hi-text {
        font-size: 70px;
    }
    .name-text {
        top: 265px;
        font-size: 34px;
    }
    .imagine {
        top: 400px;
    }
    .imagine h1 {
        font-size: 30px;
        letter-spacing: 5px;
    }
    footer a {
        padding: 0px 8px;
    }
}

